    is still supported for old scripts.
  o Since sockets are now required to build base Tcl, they are no longer
    optional with TclX.
  o Added event loop support for the TclX shell.  If any event sources are
    created the shell will enter an event loop at the end of the top level
    script instead of exiting.  Suggested by Jan Nijtmans
    <nijtmans@nici.kun.nl>.
  o Changed TclX version numbering scheme to append a decimal and a number
    to the base Tcl version instead of a letter.  This makes it compatible
    with the Tcl package versioning mechanism.
-------------------------------------------------------------------------------
13 Mar 96:
  o The copyfile command now disables newline translation by default, copying
    data in binary mode.  A new option has been added to allow translation.
===============================================================================
13 Mar 96: Released TclX 7.5.0 Beta 3
===============================================================================
14 Mar 96:
  o Added support for ITcl 2.0 from earlier TclX 7.4 based patch.
  o Modified the commandloop command to support event based command input.
   (* potential incompatibility *)
  o Removed the implicit event loop feature of the TclX added in the previous
    beta.  It could lead to some hard to find problems.
  o Added mainloop procedure to implement top level evant loops in the TclX
    shell that are similar to wish's.
  o Changed the tclx_errorHandler functionality to be consistent with bgerror.
    Uncaught synchronous errors now look for a procedure named
    tclx_errorHandler, rather than a variable which contains a procedure name.
    For backwards compatibility, a check is still made for a variable
    named tclx_errorHandler.  This functionality is deprecated and scripts
    should be change to use the new form.
-------------------------------------------------------------------------------