@@ -12,7 +12,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Common.mk.in,v 5.12 1996/03/21 06:06:34 markd Exp $
+# $Id: Common.mk.in,v 5.13 1996/03/28 07:07:49 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -21,8 +21,11 @@ SHELL = /bin/sh
 #------------------------------------------------------------------------------
 # TclX version information extracted from tclExtend.h.
 #
+TCLX_VERSION       = @TCLX_VERSION@
 TCLX_FULL_VERSION  = @TCLX_FULL_VERSION@
 TCLX_SHLIB_VERSION = @TCLX_SHLIB_VERSION@
+
+TKX_VERSION        = @TKX_VERSION@
 TKX_FULL_VERSION   = @TKX_FULL_VERSION@
 TKX_SHLIB_VERSION  = @TKX_SHLIB_VERSION@
 
